<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="alp_cmd_confirm">Confirm</string>
    <string name="alp_cmd_continue">Continue</string>
    <string name="alp_cmd_forgot_pattern">Forgot pattern?</string>
    <string name="alp_lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="alp_lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="alp_lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="alp_lockscreen_access_pattern_start">Pattern started</string>
    <string name="alp_msg_draw_an_unlock_pattern">Draw an unlock pattern:</string>
    <string name="alp_msg_draw_pattern_to_unlock">Draw pattern to unlock:</string>
    <string name="alp_msg_pattern_recorded">Pattern recorded!</string>
    <string name="alp_msg_redraw_pattern_to_confirm">Redraw pattern to confirm:</string>
    <string name="alp_msg_release_finger_when_done">Release finger when done</string>
    <string name="alp_msg_try_again">Sorry, try again</string>
    <string name="alp_msg_your_new_unlock_pattern">Your new unlock pattern:</string>
    <string name="app_name">Weight Track Assistant</string>
    <string name="bmi_mean_1">Underweight</string>
    <string name="bmi_mean_3">Overweight</string>
    <string name="desc_activity_leisure_active">Regular activities more than once a week, e.g., intense walking, bicycling or sports.</string>
    <string name="desc_activity_leisure_light">Walking, non-strenuous cycling or gardening approximately once a week.</string>
    <string name="desc_activity_leisure_moderate">Regular activity at least once a week, e.g., walking, bicycling (including to work) or gardening.</string>
    <string name="desc_activity_leisure_very_activity">Strenuous activities several times a week.</string>
    <string name="desc_activity_leisure_very_light">Almost no activity at all.</string>
    <string name="desc_activity_work_heavy">Heavy industrial work, construction work or farming.</string>
    <string name="desc_activity_work_light">Light industrial work, sales or office work that comprises light activities.</string>
    <string name="desc_activity_work_moderate">Cleaning, kitchen staff, or delivering mail on foot or by bicycle.</string>
    <string name="desc_activity_work_very_light">Sitting at the computer most of the day, or sitting at a desk.</string>
    <string name="hint_comment_write">Write comment</string>
    <string name="hint_input_height">Input your height</string>
    <string name="hint_input_weight">Input your weight</string>
    <string name="label_Log">Log</string>
    <string name="label_about">About</string>
    <string name="label_activity">Activity</string>
    <string name="label_activity_101">Fishing from boat, sitting</string>
    <string name="label_activity_102">Fishing from river bank, standing</string>
    <string name="label_activity_104">Fishing in stream, in waders</string>
    <string name="label_activity_106">Flag football</string>
    <string name="label_activity_107">Football, playing catch</string>
    <string name="label_activity_110">Ultimate frisbee</string>
    <string name="label_activity_111">Gardening</string>
    <string name="label_activity_113">Golf, general</string>
    <string name="label_activity_114">Golf, carrying clubs</string>
    <string name="label_activity_115">Golf, driving range</string>
    <string name="label_activity_116">Golf, miniature</string>
    <string name="label_activity_117">Golf, pulling clubs</string>
    <string name="label_activity_118">Golf, using power cart</string>
    <string name="label_activity_119">Handball, general</string>
    <string name="label_activity_12">Aerobics, performed in water</string>
    <string name="label_activity_122">Handball, team</string>
    <string name="label_activity_125">Hiking, cross country</string>
    <string name="label_activity_129">Ice hockey</string>
    <string name="label_activity_13">Archery</string>
    <string name="label_activity_130">Horseback riding, general</string>
    <string name="label_activity_132">Horse racing, galloping</string>
    <string name="label_activity_133">Horseback riding, trotting</string>
    <string name="label_activity_134">Horeseback riding, walking</string>
    <string name="label_activity_138">Hunting</string>
    <string name="label_activity_139">Skating, ice, 9 mph or less</string>
    <string name="label_activity_140">Skating, ice, general</string>
    <string name="label_activity_141">Skating, ice, rapidly, > 9 mph</string>
    <string name="label_activity_143">Inline skating</string>
    <string name="label_activity_146">Sexual intercourse</string>
    <string name="label_activity_150">Jai alai</string>
    <string name="label_activity_157">Judo</string>
    <string name="label_activity_158">Jujitsu</string>
    <string name="label_activity_16">Badminton, singles, competitive</string>
    <string name="label_activity_164">Karate</string>
    <string name="label_activity_165">Kayaking</string>
    <string name="label_activity_166">Kayaking, whitewater</string>
    <string name="label_activity_167">Kickboxing</string>
    <string name="label_activity_168">Lacrosse</string>
    <string name="label_activity_17">Badminton, singles, social</string>
    <string name="label_activity_170">Raking lawn</string>
    <string name="label_activity_18">Ballet dancing</string>
    <string name="label_belly">Belly</string>
    <string name="label_bicep">Bicep</string>
    <string name="label_body_water">Body water</string>
    <string name="label_bones">Bones</string>
    <string name="label_bust">Bust</string>
    <string name="label_calculate_body_fat_bmi">Calculate body fat by BMI</string>
    <string name="label_calculate_body_fat_measurement">Calculate body fat by measurement</string>
    <string name="label_chest">Chest</string>
    <string name="label_custom">Custom</string>
    <string name="label_display_name">Display name</string>
    <string name="label_email">email</string>
    <string name="label_forearm">Forearm</string>
    <string name="label_heart_rate">Heart rate</string>
    <string name="label_hips">Hips</string>
    <string name="label_month">Month</string>
    <string name="label_muscle">Muscle</string>
    <string name="label_neck">Neck</string>
    <string name="label_password">Password</string>
    <string name="label_thighs">Thighs</string>
    <string name="label_visceral_fat">Visceral fat</string>
    <string name="label_waist">Waist</string>
    <string name="label_week">Week</string>
    <string name="label_weight">Weight</string>
    <string name="label_weight_morning">Morning weight</string>
    <string name="label_weight_night">Night weight</string>
    <string name="label_weight_noon">Noon weight</string>
    <string name="label_wrist">Wrist</string>
    <string name="label_year">Year</string>
    <string name="msg_backup_restore">Backup you weight records into cloud storage then restore the data in any time</string>
    <string name="msg_reset_password">Forgot your password? Reset it.</string>
    <string name="title_backup_cloud">Cloud backup</string>
    <string name="input_direct">直接输入</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="weather_aqi">空气质量</string>
    <string name="weather_aqi_value_title">污染指数</string>
    <string name="weather_aqi_pm10">PM10</string>
    <string name="weather_aqi_pm25">PM2.5</string>
    <string name="weather_aqi_no2">NO2</string>
    <string name="weather_aqi_o3">O3</string>
    <string name="weather_aqi_so2">SO2</string>
    <string name="weather_aqi_co">CO</string>
</resources>