<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_theme_blue"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_account"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:text="@string/label_password"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/img_showPassword"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignBottom="@id/edit_password"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_show_password" />
    </RelativeLayout>


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="350dp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/label_display_name"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bt_login_or_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login_or_register"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/msg_reset_password"
        android:textColor="@android:color/white" />
</LinearLayout>