<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_aqi_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_aqi"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weather_aqi_value_title"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <com.xiaoxie.weightrecord.weather.view.CircleView
                android:id="@+id/aqi_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/weather_aqi_pm10"
                    android:textColor="@color/color_9b9c9b" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/weather_aqi_pm25"
                    android:textColor="@color/color_9b9c9b" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/weather_aqi_no2"
                    android:textColor="@color/color_9b9c9b" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/weather_aqi_so2"
                    android:textColor="@color/color_9b9c9b" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/weather_aqi_o3"
                    android:textColor="@color/color_9b9c9b" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/weather_aqi_co"
                    android:textColor="@color/color_9b9c9b" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_pm10"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="107"
                    android:textColor="@android:color/white" />


                <TextView
                    android:id="@+id/tv_pm25"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="77"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_no2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="58"
                    android:textColor="@android:color/white" />


                <TextView
                    android:id="@+id/tv_so2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="16"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_o3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="73"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_co"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="1"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>